--- a/AwsSigV4Cmdlet/AwsSigV4Cmdlet.csproj
+++ b/AwsSigV4Cmdlet/AwsSigV4Cmdlet.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AwsSignatureVersion4" Version="4.0.0" />
     <PackageReference Include="System.Management.Automation" Version="7.2.5" />
   </ItemGroup>
 
