Ensure dependent binaries are copied during build

--- a/AwsSigV4Cmdlet/AwsSigV4Cmdlet.csproj
+++ b/AwsSigV4Cmdlet/AwsSigV4Cmdlet.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>AwsSigV4</AssemblyName>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <Title>AwsSigV4 Powershell Module</Title>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
