--- a/AwsSigV4Cmdlet/api/src/IamApi/serverless.yml
+++ b/AwsSigV4Cmdlet/api/src/IamApi/serverless.yml
@@ -75,5 +75,5 @@ Outputs:
   ApiURL:
     Description: API endpoint URL for Prod environment
     Value:
-      Fn::Sub: https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/
+      !Sub https://${TestIamApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/
 
